results/SVCOMP/conversational/log-ExSymExeGetStatic-2024_03_12_17_46_51.txt
class Main {

  //@ ensures \result != null;
  public static void main(String[] args) {
    SNode sn = new SNode();
    SNode sn2 = sn.swap();
  }
}

class SNode {
  int elem;
  SNode next;
  static SNode head; // = new SNode(); //change is here

  //@ ensures \result == this;
  public SNode swap() {
    if (head != null) {
      assert false;
      System.out.println("head is not null");
    } else {
      System.out.println("head is null");
    }
    return this;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeGetStatic.java:3: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result != null;
               ^
1 error

class Main {

  public static void main(String[] args) {
    SNode sn = new SNode();
    SNode sn2 = sn.swap();
  }
}

class SNode {
  int elem;
  SNode next;
  static SNode head; // = new SNode(); //change is here

  //@ ensures \result == this;
  public SNode swap() {
    if (head != null) {
      assert false;
      System.out.println("head is not null");
    } else {
      System.out.println("head is null");
    }
    return this;
  }
}
